fix align search bar ingr and recipe

--- a/src/app/components/ingredient/ingredient.component.scss
+++ b/src/app/components/ingredient/ingredient.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px auto;
+  margin: 29px auto;
 }
 
 
@@ -15,6 +15,7 @@ mat-form-field {
   max-width: 800px;
   background-color: rgb(255, 255, 255);
   border-radius: 4px;
+  height: 84px;
 }
 
 // mat-label{
